--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.2.2"
-kotlin = "1.9.20"
+kotlin = "1.9.0"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -11,6 +11,13 @@ compose-bom = "2024.02.01"
 
 #Gemini
 generativeai = "0.2.1"
+
+#Viewmodel
+lifecycle-viewmodel-compose = "2.7.0"
+
+#coroutine
+coroutine = "1.3.9"
+
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -30,6 +37,12 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 
 #Gemini
 generativeai = {group = "com.google.ai.client.generativeai", name = "generativeai", version.ref = "generativeai"}
+
+#Viewmodel
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle-viewmodel-compose" }
+
+#Coroutine
+kotlinx-coroutines-android = {group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutine"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
